--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "metadata-scraper",
-  "version": "0.2.62",
+  "name": "@us3r-network/metadata-scraper",
+  "version": "0.3.0",
   "description": "A Javascript library for scraping/parsing metadata from a web page.  ",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
